--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+
 body {
   color: white;
   background-color: black;
-}
-p{
-  color: teal;
+  font-family: 'Sacramento', cursive;
+  font-size: 32px;
+  margin-top: 5%;
+  margin-left: 20%;
+  margin-right: 20%;
 }
